Apply manual CSS refresh

--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prompt Library</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <div class="page-wrapper">
         <!-- Header -->
@@ -33,14 +36,9 @@
                 <!-- Controls Bar -->
                 <div class="controls-bar">
                     <div class="search-wrapper">
-                        <input
-                            type="text"
-                            id="searchInput"
-                            class="search-input"
-                            placeholder="Search prompts..."
-                        >
+                        <input type="text" id="searchInput" class="search-input" placeholder="Search prompts...">
                         <div class="search-hint" id="searchHint">
-                            Press <kbd>⌘K</kbd> to search
+                            <kbd>⌘K</kbd>
                         </div>
                     </div>
 
@@ -85,4 +83,5 @@
     <script src="app.js"></script>
     <script src="links.js"></script>
 </body>
+
 </html>
