--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             </div>
         </header>
 
+        <!-- Gemini Loader -->
+        <div id="geminiLoader" class="gemini-loader"></div>
+
         <!-- Main Content -->
         <main class="main-content">
             <div class="container main-container">
