--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
                 <div class="header-logo-text">Prompts Library</div>
             </div>
             <div class="header-actions">
+                <!-- Quick Links - Desktop Only -->
+                <div class="quick-links">
+                    <a href="https://aistudio.google.com" target="_blank" rel="noopener noreferrer" class="quick-link-btn">AI Studio</a>
+                    <a href="https://gemini.google.com" target="_blank" rel="noopener noreferrer" class="quick-link-btn">Gemini</a>
+                    <a href="https://chat.openai.com" target="_blank" rel="noopener noreferrer" class="quick-link-btn">ChatGPT</a>
+                    <a href="https://www.claude.ai" target="_blank" rel="noopener noreferrer" class="quick-link-btn">Claude</a>
+                </div>
                 <button class="btn-filters" id="toggleFiltersBtn" aria-label="Toggle filters">
                     <span class="material-symbols-outlined">tune</span>
                     <span class="btn-filters-text">Filters</span>
