audio essay prompt

--- a/admin.html
+++ b/admin.html
@@ -48,8 +48,8 @@
 
     <!-- Design System Web Components -->
     <script type="module">
-        // Using local build until design system is pushed to GitHub
-        import './web-components.js?v=20260202';
+        // Using local build with multi-step editing support (SAVE FIX)
+        import './web-components.js?v=20260203-save-fix';
     </script>
 
     <!-- Admin Logic -->
