added admin access button on local

--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
             <div class="container main-container">
                 <!-- Controls Bar -->
                 <wy-controls-bar id="controlsBar" class="controls-bar" hide-view-toggle hide-details-toggle></wy-controls-bar>
+                
+                <!-- Admin Button (localhost only) -->
+                <a id="adminButton" href="/admin.html" class="admin-button" title="Open Admin Panel" style="display: none;">
+                    <span class="material-symbols-outlined">admin_panel_settings</span>
+                </a>
 
                 <div class="prompt-area view-grid">
                     <!-- Prompt List View -->
