--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <!-- Fonts imported via tokens.css (Playfair Display, Manrope, DM Sans) -->
-    <link rel="stylesheet" href="tokens.css?v=20260209c">
-    <link rel="stylesheet" href="styles.css?v=20260209c">
+    <link rel="stylesheet" href="tokens.css?v=20260219-1710">
+    <link rel="stylesheet" href="styles.css?v=20260219-1710">
 </head>
 
 <body>
@@ -103,10 +103,10 @@
     </script>
 
     <!-- Load Web Components -->
-    <script type="module" src="components/index.js"></script>
+    <script type="module" src="components/index.js?v=20260219-1710"></script>
 
-    <script src="app.js"></script>
-    <script src="links.js"></script>
+    <script src="app.js?v=20260219-1710"></script>
+    <script src="links.js?v=20260219-1710"></script>
 </body>
 
 </html>
